--- a/src/AspCourse/Views/Chat/MessagesListPartial.cshtml
+++ b/src/AspCourse/Views/Chat/MessagesListPartial.cshtml
@@ -34,6 +34,8 @@
             {
                 <button onclick="removeMessage(@m.Id)">DELETE</button>
             }
+            <button onclick="toggleLikeMessage(@m.Id)">like</button>
+            <p>@m.Likes.Count</p>
             
         </div>
             
