--- a/src/AspCourse/Views/Chat/Index.cshtml
+++ b/src/AspCourse/Views/Chat/Index.cshtml
@@ -34,78 +34,67 @@
         Topic t = p.Item1;
         var opMessage = p.Item2.First();
 
-            <div class="well" style="background-color:@opMessage.Author.Color">
-                <h2>
-                    @if (t.IsSticky)
-                    {
-                        <abbr title="Thread is sticky"><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span></abbr>
-                    }
-                    @if (t.IsClosed)
-                    {
-                        <abbr title="Thread is closed"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span></abbr>
-                    }
+        <div class="well" style="background-color:@opMessage.Author.Color">
+            <h2>
+                @if (t.IsSticky)
+                {
+                    <abbr title="Thread is sticky"><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span></abbr>
+                }
+                @if (t.IsClosed)
+                {
+                    <abbr title="Thread is closed"><span class="glyphicon glyphicon-alert" aria-hidden="true"></span></abbr>
+                }
 
 
-                    <a href="~/Chat/Topic/@t.Id.ToString()">@t.Title</a>
+                <a href="~/Chat/Topic/@t.Id.ToString()">@t.Title</a>
+
+                <span style="font-size:13px">
+                    Subscribed:@t.Likes.Where(l => l.Type == "Subscription").Count()
+                    <button onclick="toggleSubscribeTopic(@t.Id)">subscribe</button>
+                    Messages:@t.Messages.Count()
+                    Users:@t.Messages.Select(m=>m.Author).Distinct().Count()
+                </span>
+
+                @if (Model.IsModer)
+                {
+                    <span style="font-size:12px">
+
+                        <button onclick="removeTopic(@t.Id)">DELETE</button>
+
+                        @if (t.IsSticky)
+                        {
+                            <button style="background-color:green" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
+                        }
+                        else
+                        {
+                            <button style="background-color:red" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
+                        }
+                        @if (t.IsClosed)
+                        {
+                            <button style="background-color:green" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
+                        }
+                        else
+                        {
+                            <button style="background-color:red" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
+                        }
+                    </span>
+                }
+
+            </h2>
+
+            <hr />
 
 
-                    @if (Model.IsModer)
-                    {
-                        <span style="font-size:12px">
 
-                            <button onclick="removeTopic(@t.Id)">DELETE</button>
 
-                            @if (t.IsSticky)
-                            {
-                                <button style="background-color:green" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
-                            }
-                            else
-                            {
-                                <button style="background-color:red" onclick="toggleTopicSticked(@t.Id)">STICKED</button>
-                            }
-                            @if (t.IsClosed)
-                            {
-                                <button style="background-color:green" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
-                            }
-                            else
-                            {
-                                <button style="background-color:red" onclick="toggleTopicClosed(@t.Id)">CLOSED</button>
-                            }
-                        </span>
-                    }                
-
-                </h2>
-                
-                <hr />
-                <table>
-                    <tr>
-                        <td>
-                            <img src="@opMessage.Author.AvatarUrl" width="50" />
-                        </td>
-                        <td width="30px"></td>
-                        <td>
-                            <p>@opMessage.Id - <a href="~/Profile/GetUser/?username=@opMessage.Author.UserName">@opMessage.Author.NickName</a> - @opMessage.CreatedAt.ToLocalTime()</p>
-                            <p>@opMessage.Text</p>
-                            @if (!string.IsNullOrEmpty(opMessage.PictureUrl))
-                            {
-                                <p><a target="_blank" href="@opMessage.PictureUrl"><img src="@opMessage.PictureUrl" height="300" /></a></p>
-                            }
-                            <button onclick="toggleLikeMessage(@opMessage.Id)">like</button>
-                            <p>@opMessage.Likes.Count</p>
-                        </td>
-                    </tr>
-                </table>
-                    
-                   
-                
-            </div>
             <div style="margin-left:150px">
                 @Html.Partial("MessagesListPartial", new MessagesListPartialViewModel()
-                {
-                    Messages = p.Item2.Skip(1).ToList(),
-                    IsModer = Model.IsModer,
-                })
+           {
+               Messages = p.Item2.Take(3).ToList(),
+               IsModer = Model.IsModer,
+           })
             </div>
+        </div>
     }
 
 }
