--- a/src/AspCourse/Views/Chat/Topic.cshtml
+++ b/src/AspCourse/Views/Chat/Topic.cshtml
@@ -35,7 +35,7 @@
 {
     <br />
     <p><textarea id="newMessageText" style="height:150px;width:500px" placeholder="Enter Message text here"></textarea></p>
-    <p><input id="newMessagePictureUrl"  class="form-control" placeholder="Enter Picture Url text here"/></p>
+    <p><input id="imageUrlPicker"  class="form-control" placeholder="Enter Picture Url text here"/></p>
 
     <form id="uploadForm"  enctype="multipart/form-data">
         <input type="file" name="file" onchange="uploadImage()"/>
